[gd_scene load_steps=3 format=3 uid="uid://b6obkuu3066ih"]

[ext_resource type="Script" uid="uid://bjmvmpmoh3fl3" path="res://scripts/hud.gd" id="1_37p78"]
[ext_resource type="Script" uid="uid://jgfunlid3gu5" path="res://scripts/timer.gd" id="2_oo0fn"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_37p78")

[node name="Hard" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -28.0
offset_top = -15.5
offset_right = 28.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Hard
"

[node name="Normal" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -41.0
offset_top = -63.5
offset_right = 41.0
offset_bottom = -32.5
grow_horizontal = 2
grow_vertical = 2
text = "Normal"

[node name="Return" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -39.0
offset_top = 33.5
offset_right = 39.0
offset_bottom = 62.5
grow_horizontal = 2
grow_vertical = 2
text = "Return"

[node name="Timer" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 21.0
script = ExtResource("2_oo0fn")

[connection signal="pressed" from="Hard" to="." method="_on_hard_pressed"]
[connection signal="pressed" from="Normal" to="." method="_on_normal_pressed"]
[connection signal="pressed" from="Return" to="." method="_on_returned"]
